FIX: Overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -389,7 +389,6 @@ body {
     -ms-transform: translate3d(0, 0, 0);
     -o-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
-    overflow: scroll;
 }
 
 .Carousel__Item,
